--- a/app/src/main/res/layout-large-land/activity_gasto_mantenimiento.xml
+++ b/app/src/main/res/layout-large-land/activity_gasto_mantenimiento.xml
@@ -1,6 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/floatingActionButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:onClick="btnOnClickAgregarReunion"
+        android:layout_margin="16dp"
+        android:layout_gravity="bottom|right"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        app:backgroundTint="@color/botones"
+        app:srcCompat="@drawable/ic_add"
+        app:tint="@color/black" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/frmListadoGastos"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:name="com.matiaslugo.obligatorio2021.viewGastos.ListadoGastoFragment"
+        tools:layout="@layout/list_item_gastos"/>
+        <androidx.fragment.app.FragmentContainerView
+            android:id="@+id/frmDetalleGastos"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:name="com.matiaslugo.obligatorio2021.viewGastos.DetalleGastoFragment"
+            tools:layout="@layout/fragment_detalle_gasto"/>
+
+    </LinearLayout>
+
+</RelativeLayout>
