--- a/app/src/main/res/layout/fragment_listado_gastos.xml
+++ b/app/src/main/res/layout/fragment_listado_gastos.xml
@@ -2,10 +2,22 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/botones"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".viewGastos.ListadoGastoFragment">
     <ListView
         android:id="@+id/lvGastos"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_above="@+id/tvTotal"
+        android:layout_marginBottom="16dp"/>
+    <TextView
+        android:id="@+id/tvTotal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:gravity="center_horizontal"
+        android:text="$ 200"
+        android:layout_marginBottom="26dp"
+        android:textSize="26sp"/>
 </RelativeLayout>
