Modificaciones en tablet

--- a/app/src/main/res/layout-large-land/activity_gasto_mantenimiento.xml
+++ b/app/src/main/res/layout-large-land/activity_gasto_mantenimiento.xml
@@ -10,7 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:clickable="true"
-        android:onClick="btnOnClickAgregarReunion"
+        android:onClick="btnOnClickAgregarGasto"
         android:layout_margin="16dp"
         android:layout_gravity="bottom|right"
         android:layout_alignParentBottom="true"
