--- a/app/src/main/res/layout/list_item_gastos.xml
+++ b/app/src/main/res/layout/list_item_gastos.xml
@@ -6,8 +6,8 @@
 
     <LinearLayout
         android:id="@+id/llTexto"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
+        android:layout_marginLeft="@dimen/activity_vertical_margin"
+        android:layout_marginRight="@dimen/activity_vertical_margin"
         android:layout_marginTop="8dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
