--- a/app/src/main/res/layout-large-land/activity_reunion_mantenimiento.xml
+++ b/app/src/main/res/layout-large-land/activity_reunion_mantenimiento.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/botones"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
@@ -21,6 +22,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_margin="@dimen/activity_vertical_margin"
         android:orientation="horizontal">
         <fragment
             android:id="@+id/frmListadoReuniones"
