--- a/app/src/main/res/layout-large-port/activity_reunion_mantenimiento.xml
+++ b/app/src/main/res/layout-large-port/activity_reunion_mantenimiento.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/botones"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
+
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/floatingActionButton"
         android:layout_width="wrap_content"
@@ -20,21 +23,21 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal">
+        android:orientation="vertical">
         <fragment
             android:id="@+id/frmListadoReuniones"
             android:name="com.matiaslugo.obligatorio2021.viewreuniones.ListadoReunionFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="50"
+            android:layout_weight="30"
             tools:layout="@layout/list_item_reunion" />
         <fragment
             android:id="@+id/frmDetallereunion"
             android:name="com.matiaslugo.obligatorio2021.viewreuniones.DetalleReunionFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="30"
+            android:layout_weight="60"
             tools:layout="@layout/fragment_detalle_reunion" />
     </LinearLayout>
 
-</LinearLayout>
+</RelativeLayout>
