--- a/app/src/main/res/layout/activity_crear_gasto.xml
+++ b/app/src/main/res/layout/activity_crear_gasto.xml
@@ -52,7 +52,7 @@
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:padding="16dp"
+        android:padding="@dimen/activity_vertical_margin"
         android:gravity="bottom">
         <Button
             android:id="@+id/btnAgregarGasto"
