--- a/app/src/main/res/layout/activity_detalle_gasto.xml
+++ b/app/src/main/res/layout/activity_detalle_gasto.xml
@@ -8,9 +8,10 @@
     tools:context=".viewGastos.DetalleGastoActivity">
 
     <fragment
+        android:layout_margin="@dimen/activity_vertical_margin"
         android:id="@+id/frmDetalleGastos"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:name="com.matiaslugo.obligatorio2021.viewGastos.DetalleGastoFragment"
         tools:layout="@layout/fragment_detalle_gasto"/>
 </RelativeLayout>
