--- a/app/src/main/res/layout/activity_detalle_reunion.xml
+++ b/app/src/main/res/layout/activity_detalle_reunion.xml
@@ -4,11 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/botones"
     tools:context=".viewreuniones.DetalleReunionActivity">
    <fragment
        android:id="@+id/frmDetallereunion"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
+       android:layout_margin="@dimen/activity_vertical_margin"
        android:name="com.matiaslugo.obligatorio2021.viewreuniones.DetalleReunionFragment"
        tools:layout="@layout/fragment_detalle_reunion"/>
 </RelativeLayout>
