--- a/app/src/main/res/layout/fragment_detalle_gasto.xml
+++ b/app/src/main/res/layout/fragment_detalle_gasto.xml
@@ -1,15 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@color/botones"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="viewGastos.DetalleGastoFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_margin="16dp">
+        android:layout_marginTop="@dimen/activity_vertical_margin"
+        android:layout_marginBottom="@dimen/activity_vertical_margin"
+        android:padding="@dimen/activity_vertical_margin"
+        android:background="@drawable/list_item_backgraund"
+        android:layout_margin="@dimen/activity_vertical_margin">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -17,13 +22,16 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/segoe"
+                android:textSize="@dimen/tamanio_texto"
                 android:text="ID :"/>
             <TextView
                 android:id="@+id/tvIdGasto"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="16dp"
-                android:text="AlgoMas"/>
+                android:fontFamily="@font/segoe_b"
+                android:textSize="@dimen/tamanio_texto"
+                android:layout_marginLeft="@dimen/activity_vertical_margin" />
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
@@ -32,13 +40,16 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/segoe"
+                android:textSize="@dimen/tamanio_texto"
                 android:text="Motivo :"/>
             <TextView
                 android:id="@+id/tvMotivo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="16dp"
-                android:text="Motivo"/>
+                android:fontFamily="@font/segoe_b"
+                android:textSize="@dimen/tamanio_texto"
+                android:layout_marginLeft="@dimen/activity_vertical_margin" />
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
@@ -47,13 +58,16 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/segoe"
+                android:textSize="@dimen/tamanio_texto"
                 android:text="Proveedor :"/>
             <TextView
                 android:id="@+id/tvProveedor"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="16dp"
-                android:text="Proveedor"/>
+                android:textSize="@dimen/tamanio_texto"
+                android:fontFamily="@font/segoe_b"
+                android:layout_marginLeft="@dimen/activity_vertical_margin" />
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
@@ -62,13 +76,16 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/segoe"
+                android:textSize="@dimen/tamanio_texto"
                 android:text="Monto :  $"/>
             <TextView
                 android:id="@+id/tvMonto"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="16dp"
-                android:text="Monto"/>
+                android:fontFamily="@font/segoe_b"
+                android:textSize="@dimen/tamanio_texto"
+                android:layout_marginLeft="@dimen/activity_vertical_margin" />
         </LinearLayout>
     </LinearLayout>
 </RelativeLayout>
