--- a/app/src/main/res/layout/fragment_listado_reunion.xml
+++ b/app/src/main/res/layout/fragment_listado_reunion.xml
@@ -5,19 +5,23 @@
     android:layout_height="match_parent"
     tools:context=".viewreuniones.ListadoReunionFragment">
 
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/activity_vertical_margin"
+        android:padding="@dimen/activity_vertical_margin">
     <Switch
         android:id="@+id/swPendientes"
         android:gravity="right"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Pendientes" />
-
-
     <ListView
         android:id="@+id/lvReuniones"
         android:layout_below="@+id/swPendientes"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></ListView>
-
+        android:layout_height="match_parent"
+        style="@style/ListViewStyle.Light"></ListView>
+    </RelativeLayout>
 
 </RelativeLayout>
