--- a/app/src/main/res/layout/activity_crear_reunion.xml
+++ b/app/src/main/res/layout/activity_crear_reunion.xml
@@ -4,12 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="@dimen/activity_vertical_margin"
+    android:background="@color/botones"
     tools:context=".viewreuniones.CrearReunionActivity">
 
     <LinearLayout
         android:id="@+id/llCampos"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/list_item_backgraund"
         android:orientation="vertical"
         android:padding="16dp">
     <EditText
@@ -48,6 +51,7 @@
             android:id="@+id/chkAvisar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
             android:text="Avisar al Cliente " />
     </LinearLayout>
     <RelativeLayout
