--- a/app/src/main/res/layout/fragment_detalle_reunion.xml
+++ b/app/src/main/res/layout/fragment_detalle_reunion.xml
@@ -8,13 +8,15 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="350dp"
         android:background="@drawable/list_item_backgraund"
+        android:padding="@dimen/activity_vertical_margin"
         android:orientation="vertical"
-        android:layout_margin="16dp">
+        android:layout_margin="@dimen/activity_vertical_margin">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
             android:orientation="horizontal">
             <TextView
                 android:layout_width="wrap_content"
