--- a/app/src/main/res/layout/list_item_evento.xml
+++ b/app/src/main/res/layout/list_item_evento.xml
@@ -16,7 +16,7 @@
             android:id="@+id/ll1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="vertical">
     <TextView
             android:id="@+id/tv1"
             android:layout_width="wrap_content"
@@ -29,11 +29,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
             android:fontFamily="@font/segoe_b"
-            android:textStyle="bold"
-        android:text="Titulo"/>
+            android:maxLines="1" />
         </LinearLayout>
     <LinearLayout
-
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
@@ -64,8 +62,7 @@
         android:id="@+id/tvHora"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-            android:fontFamily="@font/segoe_b"
-        android:text="hora"/>
+        android:fontFamily="@font/segoe_b" />
         </LinearLayout>
 
 </LinearLayout>
